# 3d-asset-agent

./: .gitignore  HANDOFF.md  README.md  app.py  pyproject.toml  setup_env.py  start.bat  test_output.txt
config/: default.yaml  texture_patterns.yaml
docs/superpowers/plans/: 2026-04-04-fix-all-bugs.md
scripts/: batch_agent_test.py  batch_new_models.py  run_agent.sh
src/3d_asset_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/asset_agent/: __init__.py  agent.py  cli.py  exceptions.py
src/asset_agent/blender_scripts/: material_builder.py  process_asset.py  scene_setup.py  utils.py
src/asset_agent/core/: blender_runner.py  mtl_parser.py  normal_map_converter.py  texture_matcher.py  validator.py
src/asset_agent/exporters/: glb_exporter.py
src/asset_agent/importers/: base.py  fbx_importer.py  generic_importer.py  obj_importer.py
src/asset_agent/utils/: config.py  file_utils.py  logging.py  slack.py
tests/: conftest.py  test_agent_multi_material.py  test_blender_runner.py  test_e2e.py  test_mtl_parser.py  test_normal_map_converter.py  test_texture_matcher.py
